Mon, 19 Jan 2003 23:22:34 EST    Nathan Fredrickson <nathan@silverorange.com>
	
	* Change behavior on a right click so that cutting/copying with
	  the mouse works again.
	* Add deferred checking: make the misspelled word highlighting 
	  work like other apps and delay checking the current word until 
	  the cursor exits it.

Wed, 01 Jan 2003 18:20:07 -0800  Evan Martin  <martine@cs.washington.edu>

	* 2.0.4.

Wed, 01 Jan 2003 17:49:43 -0800  Bas Mevissen <pan-devel@basmevissen.nl>

	* gtkspell.spec.in: Typo fix.

Wed, 11 Dec 2002 21:17:13 -0800  Evan Martin  <martine@cs.washington.edu>

	* Conditionally use Aspell if it's available, otherwise
	  fall back to Pspell (Ramon Medina).
	* docs/ directory and beginning documentation added.

Wed, 13 Nov 2002 19:05:25 -0800  Evan Martin  <martine@cs.washington.edu>

	* 2.0.3 released.

Wed, 13 Nov 2002 18:53:20 -0800  Evan Martin  <martine@cs.washington.edu>

	* gtkspell.c: Hack around Pango wordbreaking bug (also logged
	with their developers at:
	http://bugzilla.gnome.org/show_bug.cgi?id=97545 ).

Mon, 04 Nov 2002 14:00:58 -0800  Evan Martin  <martine@cs.washington.edu>
	
	* gtkspell.spec.in: RPM .spec file template.
	  From Alex <hansolo@rochester.rr.com>.
	* configure.ac: Generate gtkspell.spec from gtkspell.spec.in.
	* README: Add Ari and Alex to a "Thanks" section.

Mon, 04 Nov 2002 09:56:44 -0800  Evan Martin  <martine@cs.washington.edu>

	* configure.ac: Check for libpspell earlier and die if we don't
	  find it.  Prerequire autoconf 2.52.  
	* gtkspell/Makefile.am, examples/Makefile.am: Set CFLAGS instead
	  of foo_CFLAGS (why does the old way not work anymore?).
	* autogen.sh: Don't automatically run configure.

Tue Aug 13 13:14:16 PDT 2002  Evan Martin  <martine@cs.washington.edu>

	* 2.0.2 released (minor bugfix).

Thu Aug 08 11:38:07 PST 2002  Evan Martin  <martine@cs.washington.edu>

	* 2.0.1 released.

Fri Mar 29 17:05:52 PST 2002  Evan Martin  <martine@cs.washington.edu>

	* Initial release.
