@@ -1,5 +1,5 @@
 noinst_PROGRAMS = simple advanced
-CFLAGS = @GTKSPELL_CFLAGS@ -I$(top_builddir)
+AM_CFLAGS = @GTKSPELL_CFLAGS@ -I$(top_builddir)
 LDADD = @GTKSPELL_LIBS@ $(top_builddir)/gtkspell/libgtkspell.la
 simple_SOURCES = simple.c
 advanced_SOURCES = advanced.c
